Fix layout shift by forcing scrollbar

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,34 @@
 
 // --- Custom Styles Start Here ---
 
+html {
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb {
+    background: #ccc; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #999; 
+}
+
+.wrapper {
+    max-width: -webkit-calc(800px - (30px * 2));
+    max-width: calc(800px - (30px * 2));
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .page .page-heading {
     display: none !important;
 }
